<resources>
    <string name="app_name">Integrated Project</string>
    <string name="ActivityConsultarRegistro_title">Search record</string>
    <string name="ActivityEditarRegistro_title">Edit record</string>
    <string name="confirmarEliminacionRegistro_title">Delete record</string>
    <string name="editText_ConsultarRegistro_IngresarSerial">Enter your computer\'s serial number</string>
    <string name="button_ConsultarRegistro_Buscar">Search</string>
    <string name="button_ConsultarRegistro_Editar">Edit</string>
    <string name="editText_newRegister_Nombre">Name</string>
    <string name="button_newRegister_Limpiar">Clear</string>
    <string name="button_newRegister_Guardar">Save</string>
    <string name="editText_newRegister_Apellido">Last name</string>
    <string name="editText_newRegister_Serial">S/N</string>
    <string name="editText_newRegister_TelefonoCelular">Cellphone number</string>
    <string name="editText_newRegister_Correo">E-mail</string>
    <string name="editText_newRegister_Cedula">ID number</string>
    <string name="editText_newRegister_CostoDeReparacion">Repairing cost</string>
    <string name="editText_newRegister_FechaEntrada">Date of entry</string>
    <string name="editText_newRegister_FechaSalida">Date of solution</string>
    <string name="editText_newRegister_TecnicoAsignado">Technician</string>
    <string name="editText_newRegister_Estado">Status</string>
    <string name="button_EditarRegistro_Descartar">Discard</string>
    <string name="button_EditarRegistro_Actualizar">Update</string>
    <string name="button_RegistroActualizado_Volver">Return</string>
    <string name="button_RegistroActualizado_SeguirBuscando">Keep looking</string>
    <string name="button_MainActivity_NuevoRegistro">New record</string>
    <string name="button_ActivityMain_RegistrosGuardados">Saved records</string>
    <string name="txt_ActivityMain_TuTrabajoDiario">Your daily work</string>
    <string name="txt_RegistroActualizado_ActualizadoCorrectamente">Updated successfully!</string>
    <string name="txt_RegistroActualizado_RegistroActualizado">The registration data was updated correctly.</string>
    <string name="ActivityNewRegister_title">Add a new record</string>
    <string name="ActivityRegistrosGuardados_title">List of records</string>
    <string name="toast_newRegister_MensajeGuardado">Your data has been saved</string>
    <string name="toast_newRegister_MensajeLimpiar">Cleared</string>
    <string name="button_RegistrosGuardados_Volver">Return</string>
    <string name="txt_EliminarRegistro_EstasSeguro">Are you sure about to delete the record?</string>
    <string name="txt_EliminarRegistro_SiEliminas">If you delete this record you will not be able to retrieve that information again.</string>
    <string name="button_EliminarRegistro_Cancelar">Cancel</string>
    <string name="button_EliminarRegistro_Aceptar">Accept</string>
</resources>
