<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrosGuardados"
    android:background="@android:color/background_dark">

    <TextView
        android:id="@+id/resgistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ActivityRegistrosGuardados_title"
        android:textColor="@drawable/txt_boton1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
            android:id="@+id/tableRow"
            android:layout_width="400dp"
            android:layout_height="19dp"
            android:layout_marginTop="59dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nombret"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editText_newRegister_Nombre"
            android:textColor="@drawable/txt_boton1"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="96dp" />

        <TextView
            android:id="@+id/apellidot"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editText_newRegister_Apellido"
            android:textColor="@drawable/txt_boton1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/serialt"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editText_newRegister_Serial"
            android:textColor="@drawable/txt_boton1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tecnicot"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editText_newRegister_TecnicoAsignado"
            android:textColor="@drawable/txt_boton1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estadot"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editText_newRegister_Estado"
            android:textColor="@drawable/txt_boton1"
            android:textStyle="bold" />
        </TableRow>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintBottom_toBottomOf="@+id/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0" >

    </ListView>

    <Button
        android:id="@+id/volver"
        android:layout_width="384dp"
        android:layout_height="49dp"
        android:background="@drawable/boton_azul"
        android:text="@string/button_RegistroActualizado_Volver"
        android:textColor="@drawable/txt_boton_azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>